--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   </head>
   <body>
     
-    <nav>Hello all</nav>
+   <div class="row"></div>
     <h1>Something Different!</h1>
+
+
+  
   </body>
 </html>
