--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-</head>
-
-<body>
-
-  <nav>Hello all</nav>
-  <h1>Something Different!</h1>
-  <h3>new stuff from me</h3>
-</body>
-
+  <body>
+    <div class="container">Hello all</div>
+    <h1>Something Different!</h1>
+    <h3>new stuff from me</h3>
+  </body>
 </html>
