Adding extra ul

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Something Different!</h1>
     <h3>new stuff from me</h3>
     <ul>Hello</ul>
-    
+    <ul>Taco Bell</ul>
 
   </body>
 </html>
