entertainment file added

--- a/entertainment.html
+++ b/entertainment.html
@@ -3,7 +3,7 @@
   <head>
     <link
       rel="shortcut icon"
-      href="./Assets/Logo/LogoMakr-34pKaN.png"
+      href="./logo.png"
       type="image/x-icon"
     />
     <meta charset="UTF-8" />
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Lazy Loader's News</title>
+    <title>Entertainment</title>
   </head>
 
   <body>
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-light bg-light">
       <a class="navbar-brand" href="#">
         <img
-          src="./Assets/Logo/LogoMakr-34pKaN.png"
+          src="./logo.png"
           width="30"
           height="30"
           class="d-inline-block align-top"
