--- a/entertainment.html
+++ b/entertainment.html
@@ -3,12 +3,12 @@
   <head>
     <link
       rel="shortcut icon"
-      href="./logo.png"
+      href="./Assets/Logo/LogoMakr-34pKaN.png"
       type="image/x-icon"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./Assets/style.css" />
+    <link rel="stylesheet" href="./main.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Entertainment</title>
+    <title>Lazy Loader's News</title>
   </head>
 
   <body>
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-light bg-light">
       <a class="navbar-brand" href="#">
         <img
-          src="./logo.png"
+          src="./Assets/Logo/LogoMakr-34pKaN.png"
           width="30"
           height="30"
           class="d-inline-block align-top"
@@ -36,17 +36,15 @@
 
       <!-- tLinks with news -->
 
-      <a class="nav-link" href="index.html"
-        >Home <span class="sr-only">(current)</span></a
-      >
+
+      <a class="nav-link" href="./index.html">Home</a>
+
 
       <a class="nav-link" href="#">Sports</a>
 
       <a class="nav-link" href="entertainment.html">Entertainment</a>
 
-      <a class="nav-link" href="#">Weather</a>
-
-      <a class="nav-link" href="#">Latest</a>
+      <a class="nav-link" href="./Assets/Weather-info/weather.html">Weather</a>
 
       <!-- search form -->
       <form class="form-inline">
@@ -61,8 +59,10 @@
         </button>
       </form>
     </nav>
-
     
+
+    <div class="jumbotron" id="main-info"></div>
+
     <!-- Script Links for jquery and Bootstap -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -74,6 +74,6 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script>
-    <script src="./Assets/script.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
