--- a/Assets/Weather-info/weather.html
+++ b/Assets/Weather-info/weather.html
@@ -35,7 +35,7 @@
 
     <a class="nav-link" href="#">Sports</a>
 
-    <a class="nav-link" href="#">Entertainment</a>
+    <a class="nav-link" href="../../entertainment.html">Entertainment</a>
 
     <a class="nav-link" href="./weather.html">Weather</a>
 
