Arranging files and folder and adding sports html

--- a/Assets/Sports-info/sports.html
+++ b/Assets/Sports-info/sports.html
@@ -3,12 +3,12 @@
   <head>
     <link
       rel="shortcut icon"
-      href="./Assets/Logo/LogoMakr-34pKaN.png"
+      href="../Logo/LogoMakr-34pKaN.png"
       type="image/x-icon"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="../../main.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-light bg-light">
       <a class="navbar-brand" href="#">
         <img
-          src="./Assets/Logo/LogoMakr-34pKaN.png"
+          src="../Logo/LogoMakr-34pKaN.png"
           width="30"
           height="30"
           class="d-inline-block align-top"
@@ -36,15 +36,15 @@
 
       <!-- tLinks with news -->
 
-      <a class="nav-link" href="./index.html">Home</a>
+      <a class="nav-link" href="../../index.html">Home</a>
 
-      <a class="nav-link" href="./Assets/Sports-info/sports.html">Sports</a>
+      <a class="nav-link" href="#">Sports</a>
 
-      <a class="nav-link" href="./Assets/Entertainment-info/entertainment.html"
+      <a class="nav-link" href="../Entertainment-info/entertainment.html"
         >Entertainment</a
       >
 
-      <a class="nav-link" href="./Assets/Weather-info/weather.html">Weather</a>
+      <a class="nav-link" href="../Weather-info/weather.html">Weather</a>
 
       <!-- search form -->
       <form class="form-inline">
@@ -61,6 +61,9 @@
     </nav>
 
     <div class="jumbotron" id="main-info"></div>
+    <!-- Script code for Entertainment News  -->
+
+    <script></script>
 
     <!-- Script Links for jquery and Bootstap -->
     <script
@@ -73,6 +76,5 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script>
-    <script src="./main.js"></script>
   </body>
 </html>
