--- a/Assets/Weather-info/weather.html
+++ b/Assets/Weather-info/weather.html
@@ -33,9 +33,9 @@
 
     <a class="nav-link" href="../../index.html">Home</a>
 
-    <a class="nav-link" href="#">Sports</a>
+    <a class="nav-link" href="../Sports-info/sports.html">Sports</a>
 
-    <a class="nav-link" href="../../entertainment.html">Entertainment</a>
+    <a class="nav-link" href="../Entertainment-info/entertainment.html">Entertainment</a>
 
     <a class="nav-link" href="./weather.html">Weather</a>
 
