Creating respective js files and liking them

--- a/Assets/Entertainment-info/entertainment.html
+++ b/Assets/Entertainment-info/entertainment.html
@@ -60,10 +60,6 @@
 
     <div class="jumbotron" id="main-info"></div>
 
-    <!-- Script code for Entertainment News  -->
-
-    <script></script>
-
     <!-- Script Links for jquery and Bootstap -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -75,5 +71,6 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script>
+    <script src="./entertaiment.js"></script>
   </body>
 </html>
