--- a/Assets/Sports-info/sports.html
+++ b/Assets/Sports-info/sports.html
@@ -61,9 +61,6 @@
     </nav>
 
     <div class="jumbotron" id="main-info"></div>
-    <!-- Script code for Entertainment News  -->
-
-    <script></script>
 
     <!-- Script Links for jquery and Bootstap -->
     <script
@@ -76,5 +73,6 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script>
+    <script src="./sports.js"></script>
   </body>
 </html>
