--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             >Lazy Loader's News</a
           ></span
         >
+        <a class="feedback" href="feedback.html">feedback</a>
       </div>
     </footer>
 
@@ -83,5 +84,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="./main.js"></script>
+    
   </body>
 </html>
