added font awesome link, created carousel added sport imgs

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <!-- tLinks with news -->
 
       <a class="nav-link" href="./index.html">Home</a>
-      <a class="nav-link" href="https://www.espn.com/nba/">Sports</a>
+      <a class="nav-link" href="./Assets/Sports-info/sports.html">Sports</a>
       <a class="nav-link" href="https://www.eonline.com/news">Entertainment</a>
       <a class="nav-link" href="./Assets/Weather-info/weather.html">Weather</a>
 
