--- a/Assets/Sports-info/sports.html
+++ b/Assets/Sports-info/sports.html
@@ -16,6 +16,7 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <title>Lazy Loader's News</title>
@@ -106,12 +107,12 @@
                     <h4>01</h4>
                     <h6>shares</h6>
                     <hr>
-                    <p class="p_tags"><a href="detail.html"><i class="fa fa-facebook"></i></a></p>
-                    <p class="p_tags_2"><a href="detail.html"><i class="fa fa-twitter"></i></a></p>
-                    <p class="p_tags_3"><a href="detail.html"><i class="fa fa-pinterest"></i></a></p>
-                    <p class="p_tags_4"><a href="detail.html"><i class="fa fa-linkedin"></i></a></p>
-                    <p class="p_tags_5"><a  href="detail.html"><i class="fa fa-tumblr"></i></a></p>
-                    <p class="p_tags_6"><a  href="detail.html"><i class="fa fa-envelope"></i></a></p>
+                    <p class="p_tags"><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></p>
+                    <p class="p_tags_2"><a href="https://twitter.com/?lang=en" target="_blank"><i class="fa fa-twitter"></i></a></p>
+                    <p class="p_tags_3"><a href="https://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest"></i></a></p>
+                    <p class="p_tags_4"><a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+                    <p class="p_tags_5"><a  href="https://www.tumblr.com/" target="_blank"><i class="fa fa-tumblr"></i></a></p>
+                    <p class="p_tags_6"><a  href="https://mail.google.com" target="_blank"><i class="fa fa-envelope"></i></a></p>
                     <hr>
                     <span class="span_3"></span>
                     <span class="span_4"><a href="detail.html"><i class="fa fa-comment"></i></a></span>
