--- a/Assets/Sports-info/sports.html
+++ b/Assets/Sports-info/sports.html
@@ -50,19 +50,16 @@
       <a class="nav-link" href="../Weather-info/weather.html">Weather</a>
 
       <!-- search form -->
-      <form class="form-inline">
-        <input
-          class="form-control mr-sm-2"
-          type="search"
-          placeholder="Search News"
-          aria-label="Search"
-        />
+      <form class="search form-inline">
+        
+          <input class="input form-control mr-sm-2" type="search" placeholder="Search News" aria-label="Search" id="search-terms"/>
+        
         <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">
           Search
         </button>
       </form>
     </nav>
-  <div class="container">
+      <div class="container">
         <ul class="news-list"></ul>
       </div>
 
