--- a/feedback.html
+++ b/feedback.html
@@ -46,7 +46,7 @@
       
       <hr />
     <div class="container">
-        <h1><span class="badge badge-secondary">Your openion matters</span></h1>
+        <h1><span class="badge badge-secondary">Your opinion matters</span></h1>
 
         <form>
             <div class="form-row">
