--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           class="d-inline-block align-top"
           alt=""
           loading="lazy"
+          id="img-tag"
         />
         Lazy Loader's News
       </a>
@@ -52,19 +53,25 @@
         </button>
       </form>
     </nav>
-    <hr />
-    <div class="jumbotron" id="main-info">
+
+    <div
+      class="jumbotron"
+      id="main-info"
+      aria-placeholder="Search News to See Articles"
+    >
+      <h3>News Articles</h3>
+      <hr />
       <div class="container">
         <ul class="news-list"></ul>
       </div>
     </div>
-    <hr />
+
     <!-- Footer Starts Here  -->
     <footer class="footer text-center py-3 bg-light sticky-footer">
       <div class="container" id="footer-container">
         <span class="text-muted"
           >Copyright &copy; 2020
-          <a class="text-info" href="https://github.com/twopcz"
+          <a class="text-info" href="https://github.com/JAPKIRAT96/Project-1-"
             >Lazy Loader's News</a
           ></span
         >
