styling Feedback HTML

--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
     </div>
 
     <!-- Footer Starts Here  -->
-    <footer class="footer text-center py-3 bg-light sticky-footer">
+    <footer
+      class="footer text-center py-3 bg-light sticky-footer"
+      style="margin-top: 28.5%"
+    >
       <div class="container" id="footer-container">
         <span class="text-muted"
           >Copyright &copy; 2020
@@ -75,7 +78,9 @@
             >Lazy Loader's News</a
           ></span
         >
-        <a class="feedback" href="feedback.html">feedback</a>
+        <a class="feedback" href="feedback.html" style="float: right"
+          >feedback</a
+        >
       </div>
     </footer>
 
@@ -91,6 +96,5 @@
       crossorigin="anonymous"
     ></script>
     <script src="./main.js"></script>
-    
   </body>
 </html>
