finished final touches

--- a/index.html
+++ b/index.html
@@ -15,12 +15,17 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
+    <!-- Incorporating font-awesome -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>Lazy Loader's News</title>
   </head>
   <body>
     <!-- Navbar starts here  -->
     <nav class="navbar navbar-light bg-light">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="./index.html">
         <img
           src="./Assets/Logo/LogoMakr-34pKaN.png"
           width="30"
@@ -35,7 +40,7 @@
       <!-- tLinks with news -->
 
       <a class="nav-link" href="./index.html">Home</a>
-      <a class="nav-link" href="https://www.espn.com/nba/">Sports</a>
+      <a class="nav-link" href="./Assets/Sports-info/sports.html">Sports</a>
       <a class="nav-link" href="https://www.eonline.com/news">Entertainment</a>
       <a class="nav-link" href="./Assets/Weather-info/weather.html">Weather</a>
 
@@ -78,12 +83,33 @@
             >Lazy Loader's News</a
           ></span
         >
-        <a
-          class="feedback"
-          href="./Assets/Feedback-page/feedback.html"
-          style="float: right"
+        <a class="feedback" href="./Assets/Feedback-page/feedback.html"
           >feedback</a
         >
+
+        <a href="https://www.facebook.com/" target="_blank" id="footer-links"
+          ><i class="fa fa-facebook"></i
+        ></a>
+
+        <a href="https://twitter.com/?lang=en" target="_blank" id="footer-links"
+          ><i class="fa fa-twitter"></i
+        ></a>
+
+        <a href="https://www.pinterest.com/" target="_blank" id="footer-links"
+          ><i class="fa fa-pinterest"></i
+        ></a>
+
+        <a href="https://www.linkedin.com/" target="_blank" id="footer-links"
+          ><i class="fa fa-linkedin"></i
+        ></a>
+
+        <a href="https://www.tumblr.com/" target="_blank" id="footer-links"
+          ><i class="fa fa-tumblr"></i
+        ></a>
+
+        <a href="https://mail.google.com" target="_blank" id="footer-links"
+          ><i class="fa fa-envelope"></i
+        ></a>
       </div>
     </footer>
 
