--- a/Assets/Feedback-page/feedback.html
+++ b/Assets/Feedback-page/feedback.html
@@ -24,7 +24,7 @@
         <!-- tLinks with news -->
   
         <a class="nav-link" href="../../index.html">Home</a>
-        <a class="nav-link" href="https://www.espn.com/nba/">Sports</a>
+        <a class="nav-link" href="../Sports-info/sports.html">Sports</a>
         <a class="nav-link" href="https://www.eonline.com/news">Entertainment</a>
         <a class="nav-link" href="../Weather-info/weather.html">Weather</a>
   
