--- a/Assets/Weather-info/weather.html
+++ b/Assets/Weather-info/weather.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="./weather.css">
     <link rel="stylesheet" href="./css/weather-icons.min.css">
+     <!-- Incorporating font-awesome -->
+     <link
+     rel="stylesheet"
+     href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+   />
 </head>
 <body>
   
@@ -34,7 +39,7 @@
 
     <a class="nav-link" href="../../index.html">Home</a>
 
-    <a class="nav-link" href="https://www.espn.com/nba/">Sports</a>
+    <a class="nav-link" href="../Sports-info/sports.html">Sports</a>
 
     <a class="nav-link" href="https://www.eonline.com/news">Entertainment</a>
 
@@ -93,7 +98,48 @@
        </div>
     </div>
   </div>
- 
+  <!-- Footer Starts Here  -->
+ <!-- Footer Starts Here  -->
+ <footer
+ class="footer text-center py-3 bg-light sticky-footer"
+ style="margin-top: 5%;"
+>
+ <div class="container" id="footer-container">
+   <span class="text-muted"
+     >Copyright &copy; 2020
+     <a class="text-info" href="https://github.com/JAPKIRAT96/Project-1-"
+       >Lazy Loader's News</a
+     ></span
+   >
+   <a class="feedback" href="./Assets/Feedback-page/feedback.html"
+     >feedback</a
+   >
+
+   <a href="https://www.facebook.com/" target="_blank" id="footer-links"
+     ><i class="fa fa-facebook"></i
+   ></a>
+
+   <a href="https://twitter.com/?lang=en" target="_blank" id="footer-links"
+     ><i class="fa fa-twitter"></i
+   ></a>
+
+   <a href="https://www.pinterest.com/" target="_blank" id="footer-links"
+     ><i class="fa fa-pinterest"></i
+   ></a>
+
+   <a href="https://www.linkedin.com/" target="_blank" id="footer-links"
+     ><i class="fa fa-linkedin"></i
+   ></a>
+
+   <a href="https://www.tumblr.com/" target="_blank" id="footer-links"
+     ><i class="fa fa-tumblr"></i
+   ></a>
+
+   <a href="https://mail.google.com" target="_blank" id="footer-links"
+     ><i class="fa fa-envelope"></i
+   ></a>
+ </div>
+</footer>
   
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
