--- a/Assets/Sports-info/sports.html
+++ b/Assets/Sports-info/sports.html
@@ -83,28 +83,28 @@
                 <div class="carousel-item active">
                   <img
                     class="d-block w-100"
-                    src="./sports-assets/img:26.jpg"
+                    src="./sports-assets/img26.jpg"
                     alt="First slide"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="./sports-assets/img:3.jpg"
+                    src="./sports-assets/img3.jpg"
                     alt="Second slide"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="./sports-assets/img:27.jpg"
+                    src="./sports-assets/img27.jpg"
                     alt="Third slide"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="./sports-assets/img:39.jpg"
+                    src="./sports-assets/img39.jpg"
                     alt="Third slide"
                   />
                 </div>
